--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 stages:
-  - build
+#  - build
 #  - test
 #  - docker_build
   - docker_push
@@ -10,14 +10,14 @@ variables:
   DOCKER_IMAGE_PREFIX: "repository/docker-private/demo-project/quarkus-helloworld"
   CI_REGISTRY_IMAGE: "172.30.38.4:8083/repository/docker-private/demo-project/quarkus-helloworld"
 
-build:
-  stage: build
-  image: pratik1945/openjdk11-docker:3.0.0testing
-  script:
-    - mvn clean package -DskipTests -Dquarkus.container-image.build=true
-  artifacts:
-    paths:
-      - target/*.jar
+# build:
+#   stage: build
+#   image: pratik1945/openjdk11-docker:3.0.0testing
+#   script:
+#     - mvn clean package -DskipTests -Dquarkus.container-image.build=true
+#   artifacts:
+#     paths:
+#       - target/*.jar
 
 # test:
 #   stage: test
@@ -32,7 +32,7 @@ build:
 docker_push:
   stage: docker_push
   image:
-    name: docker:19.03.14
+    name: pratik1945/openjdk11-docker:3.0.0testing
     entrypoint: [""]
   variables:
     DOCKER_HOST: tcp://dind.gitlab-runner:2375
@@ -44,6 +44,8 @@ docker_push:
     - echo $DOCKER_AUTH_CONFIG > /root/.docker/config.json
     - echo "Preparing to push Docker image..."
   script:
+    - mvn clean package -DskipTests -Dquarkus.container-image.build=true
+    - docker images
     - docker tag "$DOCKER_IMAGE_PREFIX" "$CI_REGISTRY_IMAGE:${CI_COMMIT_REF_SLUG}-${CI_COMMIT_SHORT_SHA}"
     - docker push "$CI_REGISTRY_IMAGE:${CI_COMMIT_REF_SLUG}-${CI_COMMIT_SHORT_SHA}"
   tags:
