--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,8 @@
 stages:
-#  - build
-#  - test
-#  - docker_build
   - build
+#  - test
+  - docker_build
+#  - build
 
 variables:
   MAVEN_CLI_OPTS: "--batch-mode --errors --fail-at-end --show-version"
@@ -12,8 +12,9 @@ variables:
 
 build:
   stage: build
+  image: maven:3.8.4-openjdk-11-slim
   script:
-    - mvn clean package -DskipTests -Dquarkus.container-image.build=true
+    - mvn clean package -DskipTests -Dquarkus.container-image.build=false
   artifacts:
     paths:
       - target/*.jar
@@ -26,7 +27,24 @@ build:
 #   tags:
 #    - master
 
-
+docker_build:
+  stage: docker_build
+  image:
+    name: docker:19.03.14
+    entrypoint: [""]
+  services:
+    - docker:19.03.14-dind
+  before_script:
+    - echo $DOCKER_AUTH_CONFIG > /root/.docker/config.json
+    - echo "Preparing to build Docker image..."
+  script: |
+    export TARGET_JAR=$(ls target/*.jar | grep -v original)
+    echo "Using JAR file: $TARGET_JAR"
+    docker build -t "$DOCKER_IMAGE_PREFIX" .
+      --build-arg JAR_FILE="$TARGET_JAR"
+      --build-arg QUARKUS_HTTP_HOST="0.0.0.0"
+  tags:
+    - master
 
 # build:
 #   stage: build
