--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,43 +27,24 @@ build:
 #   tags:
 #    - master
 
+
 docker_build:
   stage: docker_build
   image:
     name: docker:19.03.14
-    entrypoint: [""]
+  variables:
+    DOCKER_HOST: tcp://dind.gitlab-runner:2375
   services:
-    - docker:19.03.14-dind
+  - name: docker:19.03.14-dind
+    entrypoint: ["env", "-u", "DOCKER_HOST"]
+    command: ["dockerd-entrypoint.sh"]
   before_script:
     - echo $DOCKER_AUTH_CONFIG > /root/.docker/config.json
-    - echo "Preparing to build Docker image..."
-  script: |
-    export TARGET_JAR=$(ls target/*.jar | grep -v original)
-    echo "Using JAR file: $TARGET_JAR"
-    docker build -t "$DOCKER_IMAGE_PREFIX" .
-      --build-arg JAR_FILE="$TARGET_JAR"
-      --build-arg QUARKUS_HTTP_HOST="0.0.0.0"
+    - echo "Preparing to push Docker image..."
+  script:
+    - docker build -t $DOCKER_IMAGE_PREFIX .
+    - docker images
+    - docker tag "$DOCKER_IMAGE_PREFIX" "$CI_REGISTRY_IMAGE:${CI_COMMIT_REF_SLUG}-${CI_COMMIT_SHORT_SHA}"
+    - docker push "$CI_REGISTRY_IMAGE:${CI_COMMIT_REF_SLUG}-${CI_COMMIT_SHORT_SHA}"
   tags:
     - master
-
-# build:
-#   stage: build
-#   image:
-#     name: registry.hub.docker.com/pratik1945/openjdk11-docker:3.0.0testing
-#     entrypoint: [""]
-#   variables:
-#     DOCKER_HOST: tcp://dind.gitlab-runner:2375
-#   services:
-#   - name: registry.hub.docker.com/pratik1945/openjdk11-docker:3.0.0testing
-#     entrypoint: ["env", "-u", "DOCKER_HOST"]
-#     command: ["dockerd-entrypoint.sh"]
-#   before_script:
-#     - echo $DOCKER_AUTH_CONFIG > /root/.docker/config.json
-#     - echo "Preparing to push Docker image..."
-#   script:
-#     - mvn clean package -DskipTests -Dquarkus.container-image.build=true
-#     - docker images
-#     - docker tag "$DOCKER_IMAGE_PREFIX" "$CI_REGISTRY_IMAGE:${CI_COMMIT_REF_SLUG}-${CI_COMMIT_SHORT_SHA}"
-#     - docker push "$CI_REGISTRY_IMAGE:${CI_COMMIT_REF_SLUG}-${CI_COMMIT_SHORT_SHA}"
-#   tags:
-#     - master
