--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,6 +57,9 @@ docker_build:
 deploy:
   stage: deploy
   image: $OC_IMAGE_NAME_AND_TAG
+  before_script:
+    - mkdir -p $HOME/.docker
+    - echo $DOCKER_AUTH_CONFIG > $HOME/.docker/config.json
   script:
     - echo "Deploying to OpenShift..."
     - |
