--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ variables:
   MAVEN_OPTS: "-Dmaven.repo.local=${CI_PROJECT_DIR}/.m2/repository"
   DOCKER_IMAGE_PREFIX: "repository/docker-private/demo-project/quarkus-helloworld"
   CI_REGISTRY_IMAGE: "172.30.38.4:8083/repository/docker-private/demo-project/quarkus-helloworld"
-  OC_IMAGE_NAME_AND_TAG: "alpine:oc-4.10.4"
+  OC_IMAGE_NAME_AND_TAG: "172.30.38.4:8083/repository/docker-private/alpine:oc-4.10.4"
   OPENSHIFT_PROJECT: "quarkus-helloworld"
 
 build:
@@ -45,6 +45,7 @@ docker_build:
   before_script:
     - mkdir -p $HOME/.docker
     - echo $DOCKER_AUTH_CONFIG > $HOME/.docker/config.json
+    - echo $HOME/.docker/config.json
     - echo "Preparing for Docker image..."
   script:
     - docker build -t $DOCKER_IMAGE_PREFIX .
@@ -57,6 +58,10 @@ docker_build:
 deploy:
   stage: deploy
   image: $OC_IMAGE_NAME_AND_TAG
+  services:
+  - name: docker:19.03.14-dind
+    entrypoint: ["env", "-u", "DOCKER_HOST"]
+    command: ["dockerd-entrypoint.sh"]
   before_script:
     - mkdir -p $HOME/.docker
     - echo $DOCKER_AUTH_CONFIG > $HOME/.docker/config.json
