--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,7 +57,9 @@ docker_build:
 
 deploy:
   stage: deploy
-  image: $OC_IMAGE_NAME_AND_TAG
+  image: docker:19.03.14
+  variables:
+    DOCKER_HOST: tcp://dind.gitlab-runner:2375
   services:
   - name: docker:19.03.14-dind
     entrypoint: ["env", "-u", "DOCKER_HOST"]
