--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,7 +59,7 @@ deploy:
   stage: deploy
   image: $OC_IMAGE_NAME_AND_TAG
   variables:
-    DOCKER_TLS_CERTDIR: "/certs"
+    DOCKER_TLS_CERTDIR: "$HOME/.docker/config.json"
     DOCKER_OPTS: "--insecure-registry=$NEXUS_URL"
   script:
     - echo "Deploying to OpenShift..."
