--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -15,6 +15,6 @@ spec:
     spec:
       containers:
         - name: my-quarkus-app
-          image: $CI_REGISTRY_IMAGE:${CI_COMMIT_REF_SLUG}-${CI_COMMIT_SHORT_SHA}
+          image: 172.30.38.4:8083/repository/docker-private/demo-project/quarkus-helloworld:{project.version}
           ports:
             - containerPort: 8080
