--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,57 +54,57 @@ docker_build:
   script:
     - docker build -t $DOCKER_IMAGE_PREFIX .
     - docker images
-    - docker tag "$DOCKER_IMAGE_PREFIX" "$CI_REGISTRY_IMAGE:${CI_COMMIT_REF_SLUG}-${CI_COMMIT_SHORT_SHA}"
-    - docker push "$CI_REGISTRY_IMAGE:${CI_COMMIT_REF_SLUG}-${CI_COMMIT_SHORT_SHA}"
+    - docker tag "$DOCKER_IMAGE_PREFIX" "$CI_REGISTRY_IMAGE:${project.version}"
+    - docker push "$CI_REGISTRY_IMAGE:${project.version}"
   tags:
     - master
 
 
-deploy_dev:
-  stage: deploy
-  image: $OC_IMAGE_NAME_AND_TAG
-  script:
-    - echo "Deploying to Dev environment..."
-    - |
-      oc login $OPENSHIFT_SERVER --token=$OCP_TOKEN_DEMO --insecure-skip-tls-verify=true
-      oc project $OPENSHIFT_PROJECT_DEV
-      oc apply -f k8s/deployment.yml
-  only:
-    - /^feature-.*$/
-  tags:
-    - master
+# deploy_dev:
+#   stage: deploy
+#   image: $OC_IMAGE_NAME_AND_TAG
+#   script:
+#     - echo "Deploying to Dev environment..."
+#     - |
+#       oc login $OPENSHIFT_SERVER --token=$OCP_TOKEN_DEMO --insecure-skip-tls-verify=true
+#       oc project $OPENSHIFT_PROJECT_DEV
+#       oc apply -f k8s/deployment.yml
+#   only:
+#     - /^feature-.*$/
+#   tags:
+#     - master
 
 
-deploy_qa:
-  stage: deploy
-  image: $OC_IMAGE_NAME_AND_TAG
-  script:
-    - echo "Deploying to QA environment..."
-    - |
-      oc login $OPENSHIFT_SERVER --token=$OCP_TOKEN_DEMO --insecure-skip-tls-verify=true
-      oc project $OPENSHIFT_PROJECT_QA
-      oc apply -f k8s/deployment.yml
-  only:
-    - /^feature-.*$/
-  when: manual
-  allow_failure: true
-  tags:
-    - master
+# deploy_qa:
+#   stage: deploy
+#   image: $OC_IMAGE_NAME_AND_TAG
+#   script:
+#     - echo "Deploying to QA environment..."
+#     - |
+#       oc login $OPENSHIFT_SERVER --token=$OCP_TOKEN_DEMO --insecure-skip-tls-verify=true
+#       oc project $OPENSHIFT_PROJECT_QA
+#       oc apply -f k8s/deployment.yml
+#   only:
+#     - /^feature-.*$/
+#   when: manual
+#   allow_failure: true
+#   tags:
+#     - master
 
 
-deploy_staging:
-  stage: deploy
-  image: $OC_IMAGE_NAME_AND_TAG
-  script:
-    - echo "Deploying to Staging environment..."
-    - |
-      oc login $OPENSHIFT_SERVER --token=$OCP_TOKEN_DEMO --insecure-skip-tls-verify=true
-      oc project $OPENSHIFT_PROJECT_STAGING
-      oc apply -f k8s/deployment.yml
-  only:
-    - /^release-.*$/
-  tags:
-    - master
+# deploy_staging:
+#   stage: deploy
+#   image: $OC_IMAGE_NAME_AND_TAG
+#   script:
+#     - echo "Deploying to Staging environment..."
+#     - |
+#       oc login $OPENSHIFT_SERVER --token=$OCP_TOKEN_DEMO --insecure-skip-tls-verify=true
+#       oc project $OPENSHIFT_PROJECT_STAGING
+#       oc apply -f k8s/deployment.yml
+#   only:
+#     - /^release-.*$/
+#   tags:
+#     - master
 
 # deploy_prod:
 #   stage: deploy
