--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,8 +20,8 @@ build:
   stage: build
   image: maven:3.8.4-openjdk-11-slim
   script:
-   - mvn versions:set -DnewVersion=${project.version}
-   - echo "${project.version}"
+   - mvn versions:set -DnewVersion=${CI_COMMIT_SHORT_SHA} -f pom.xml
+   - echo "${CI_COMMIT_SHORT_SHA}"
    - mvn clean package -DskipTests -Dquarkus.container-image.build=false
   artifacts:
     paths:
@@ -59,8 +59,8 @@ docker_build:
     - mv pom.xml.bak pom.xml
     - docker build -t $DOCKER_IMAGE_PREFIX .
     - docker images
-    - docker tag "$DOCKER_IMAGE_PREFIX" "$CI_REGISTRY_IMAGE:${project.version}"
-    - docker push "$CI_REGISTRY_IMAGE:${project.version}"
+    - docker tag "$DOCKER_IMAGE_PREFIX" "$CI_REGISTRY_IMAGE:${CI_COMMIT_SHORT_SHA}"
+    - docker push "$CI_REGISTRY_IMAGE:${CI_COMMIT_SHORT_SHA}"
   dependencies:
     - build
   tags:
