--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,6 +56,7 @@ docker_build:
     - echo $HOME/.docker/config.json
     - echo "Preparing for Docker image..."
   script:
+    - echo "Image reference: $DOCKER_IMAGE_PREFIX:${VERSION}"
     - docker build -t $DOCKER_IMAGE_PREFIX:${VERSION} .
     - docker images | grep "$DOCKER_IMAGE_PREFIX"
 #    - docker tag "$DOCKER_IMAGE_PREFIX" "$CI_REGISTRY_IMAGE:${VERSION}"
