--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,8 @@ variables:
   MAVEN_CLI_OPTS: "--batch-mode --errors --fail-at-end --show-version"
   MAVEN_OPTS: "-Dmaven.repo.local=${CI_PROJECT_DIR}/.m2/repository"
   DOCKER_IMAGE_PREFIX: "repository/docker-private/demo-project/quarkus-helloworld"
-  CI_REGISTRY_IMAGE: "172.30.38.4:8083/repository/docker-private/demo-project/quarkus-helloworld"
+  NEXUS: "172.30.38.4:8083"
+  CI_REGISTRY_IMAGE: "$NEXUS/$DOCKER_IMAGE_PREFIX:$VERSION"
   OC_IMAGE_NAME_AND_TAG: "repository/docker-private/alpine:oc-4.10.4"
   OPENSHIFT_SERVER: "https://api.openshift.mobicom.mn:6443"
   OPENSHIFT_PROJECT_DEV: "quarkus-demo-project"
@@ -56,10 +57,10 @@ docker_build:
     - echo $HOME/.docker/config.json
     - echo "Preparing for Docker image..."
   script:
-    - docker build -t $DOCKER_IMAGE_PREFIX .
-    - docker images | grep "$DOCKER_IMAGE_PREFIX"
-    - docker tag "$DOCKER_IMAGE_PREFIX" "$CI_REGISTRY_IMAGE:${VERSION}"
-    - docker push "$CI_REGISTRY_IMAGE:${VERSION}"
+    - docker build -t $CI_REGISTRY_IMAGE .
+    - docker images 
+    # - docker tag "$DOCKER_IMAGE_PREFIX" "$CI_REGISTRY_IMAGE:${VERSION}"
+    - docker push "$CI_REGISTRY_IMAGE"
   dependencies:
     - build 
   tags:
