--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,14 +21,16 @@ build:
   stage: build
   image: maven:3.8.4-openjdk-11-slim
   script:
-   - VERSION=$(mvn --non-recursive help:evaluate -Dexpression=project.version -q -DforceStdout)
+   - export VERSION=$(mvn --non-recursive help:evaluate -Dexpression=project.version -q -DforceStdout)
    - echo $VERSION
-   - mvn clean package -DskipTests -Dquarkus.container-image.build=false
-  artifacts:
-    paths:
-      - target/*.jar
+  #  - VERSION=$(mvn --non-recursive help:evaluate -Dexpression=project.version -q -DforceStdout)
+  #  - echo $VERSION
+  #  - mvn clean package -DskipTests -Dquarkus.container-image.build=false
+  # artifacts:
+  #   paths:
+  #     - target/*.jar
   variables:
-    VERSION: $VERSION
+    CI_COMMIT_SHORT_SHA: "$VERSION" 
   tags:
     - master
 
@@ -57,10 +59,11 @@ docker_build:
     - echo $HOME/.docker/config.json
     - echo "Preparing for Docker image..."
   script:
-    - docker build -t $CI_REGISTRY_IMAGE .
-    - docker images 
+    - echo "$CI_COMMIT_SHORT_SHA" 
+    # - docker build -t $CI_REGISTRY_IMAGE .
+    # - docker images 
     # - docker tag "$DOCKER_IMAGE_PREFIX" "$CI_REGISTRY_IMAGE:${VERSION}"
-    - docker push "$CI_REGISTRY_IMAGE"
+    # - docker push "$CI_REGISTRY_IMAGE"
   dependencies:
     - build 
   tags:
