--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,10 +59,10 @@ docker_build:
     - export CI_COMMIT_SHORT_SHA=$(cat version.txt)
     - echo "CI_COMMIT_SHORT_SHA=${CI_COMMIT_SHORT_SHA}"
     - echo "$CI_COMMIT_SHORT_SHA"
-    - docker build -t "$DOCKER_IMAGE_PREFIX:${CI_COMMIT_SHORT_SHA}" .
-    - docker images | grep $DOCKER_IMAGE_PREFIX
+    - docker build -t "$CI_REGISTRY_IMAGE:${CI_COMMIT_SHORT_SHA}" .
+    - docker images | grep $CI_REGISTRY_IMAGE
 #    - docker tag "$DOCKER_IMAGE_PREFIX" "$CI_REGISTRY_IMAGE:${CI_COMMIT_SHORT_SHA}"
-#    - docker push "$CI_REGISTRY_IMAGE"
+    - docker push "$CI_REGISTRY_IMAGE"
   dependencies:
     - build 
   tags:
