--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,8 +61,7 @@ docker_build:
     - echo "$CI_COMMIT_SHORT_SHA"
     - docker build -t "$CI_REGISTRY_IMAGE:${CI_COMMIT_SHORT_SHA}" .
     - docker images | grep $CI_REGISTRY_IMAGE
-#    - docker tag "$DOCKER_IMAGE_PREFIX" "$CI_REGISTRY_IMAGE:${CI_COMMIT_SHORT_SHA}"
-    - docker push "$CI_REGISTRY_IMAGE"
+    - docker push "$CI_REGISTRY_IMAGE:${CI_COMMIT_SHORT_SHA}"
   dependencies:
     - build 
   tags:
