--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -15,6 +15,6 @@ spec:
     spec:
       containers:
         - name: my-quarkus-app
-          image: 172.30.38.4:8083/repository/docker-private/demo-project/quarkus-helloworld:{project.version}
+          image: 172.30.38.4:8083/repository/docker-private/demo-project/quarkus-helloworld:${CI_COMMIT_SHORT_SHA}
           ports:
             - containerPort: 8080
